src/snapshots/afrotd__parser__tests__interpretation_6.5.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 3
index: 2
text: "Bei einem Free Kick gibt B1 in der Nähe einer Seitenlinie ein\nungültiges Fair Catch-Signal, mufft den Kick und dieser fliegt ins Aus."
ruling: "Team B’s Ball, First Down und 10 am Inbounds Spot."
