src/snapshots/afrotd__parser__tests__interpretation_6.5.3_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 3
index: 3
text: "Ein Scrimmage Kick berührt den Boden jenseits der neutralen\nZone, prallt hoch in die Luft und danach zeigt B1 einen Fair Catch an."
ruling: "Ungültiges Signal. Der Ball ist dort dead, wo er recovert\nwurde."
