src/snapshots/afrotd__parser__tests__interpretation_6.5.3_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 3
index: 5
text: "Team A’s Scrimmage Kick rollt jenseits der neutralen Zone, als\nB17 seine Mitspieler auffordert, vom Ball wegzubleiben. Dabei winkt er\nmit seinen Armen unterhalb seiner Taille oder tiefer."
ruling: "Ungültiges Signal. Der Ball wird gemäß den Regeln dead, wenn eines der\nTeams ihn recovert."
