src/snapshots/afrotd__parser__tests__interpretation_6.5.3_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 3
index: 6
text: "Während sich ein Free Kick in der Luft befindet, gibt B21 ein\nwinkendes Signal, welches nicht alle Anforderungen eines gültigen Fair\nCatch Signales erfüllt. Der Ball wird gefangen (a) von B21 an der B-5\noder (b) von B44 an der B-5."
ruling: "Der Ball wird mit dem Fangen\ndead. (a) B’s Ball, 1. und 10 von der B-25; (b) B’s Ball, 1. und 10 von\nder B-5."
