src/snapshots/afrotd__parser__tests__interpretation_6.5.5_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 5
index: 3
text: "B1 fängt den Ball, nachdem B3 einen Fair Catch angezeigt hat."
ruling: "Der Ball ist dead, sobald und wo er gefangen wurde. B1 hat\nkeinen Anspruch auf den Schutz der Fair Catch Regel, hat aber den\ngleichen Schutz wie bei jedem anderen Dead Ball (Regel 6.5.1.d)."
